# FPG

./: README.md  read
GoETH/: FPG_MSW_01.txt
GoETH/ETHLib/Java/: Bytes.java  CipherException.java  Converter.java  EncodeTransaction.java  Keys.java  LinuxSecureRandom.java  Numeric.java  RlpDecoder.java  RlpEncoder.java  RlpList.java  RlpString.java  Sign.java  SignRawTransaction.java  SocketClient.java  Strings.java  SynSemst.java  Wallet.java  WalletBalanceByWalletResponse.java  WalletFile.java
GoETH/SCs/: FPG_MST_01.txt  SmartContractTemplate.sol
GoETH/Tools/: FIMSUpgradeTool.js  sol2js.bat
QtWallet/: README.md
QtWallet/QtWallet/: mainwindow.ui
QtWallet/build-QtWallet-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Makefile  Makefile.Debug  Makefile.Release  appqtwallet_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake  ui_mainwindow.h
iService/Trade/: temp.txt
idWallet/: .project  Cargo.toml  Cargo.toml.old  Ng18_keygen.rs  README.md  Rocket.toml  ToDo.txt  build.txt  params.json  ttt.txt
idWallet/examples/: HelloWorld.h  HelloWorld.java  client.rs  common.rs  gg18.rs  gg18_keygen_client.rs  gg18_sign_client.rs  gg20_sm_manager.rs  run.bat  server.rs  sm_manager.rs
idWallet/src/: lib.rs
idWallet/src/bw/: coins.rs  (+4 more)
kernel_ETH/: ToDo.txt
kernel_ETH/Tools/: CS2FPGMSW.js
kernel_SOL_exp/: ToDo.txt
temp/ExchangeINRust/: Cargo.toml  build.rs
temp/ExchangeINRust/config/: config.rpc
temp/ExchangeINRust/proto/: orderbook.proto
temp/ExchangeINRust/src/: client.rs  exchanges.rs  server.rs
(+57 files in other folders)
