[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the orderbook gRPC server
name = "orderbook-server"
path = "src/server.rs"

[[bin]] # Bin to run the orderbook gRPC client
name = "orderbook-client"
path = "src/client.rs"


[[bin]] # Bin to run the orderbook sources
name = "orderbook-sources"
path = "src/exchanges.rs" 

[dependencies]
tonic = "0.9"
prost = "0.11"
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["full"] }
tokio-tungstenite = "0.14.0"
tungstenite = "0.12"

##grpcio = "0.8.0"
##protobuf = "2.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

url = "2.2"

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.10.0"